second try to fix the layout problem at landscape position on mobile device

--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,7 @@
 html,
 body {
   height: 100%;
+  height: 100dvh;
   position: relative;
 }
 
@@ -243,7 +244,7 @@ select {
 
 .canvas-wrap {
   flex: 1;
-  min-height: 300px;
+  min-height: 0;
   position: relative;
 }
 
